--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="bg-dark text-light p-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex">
-                <img class="img-fluid w-50" src="images/me.png">
+                <img class="img-fluid w-50" src="./images/me.png">
                 <div class="pt-5">
                     <h1 style="padding-top: 50px">Hi, I'm Andrew!</h1>
                     <P class="lead my-4">
