--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="" class="nav-link">About</a>
                     </li> -->
                     <li class="nav-item">
-                        <a href="gallery.html" class="nav-link">Gallery</a>
+                        <a href="./gallery.html" class="nav-link">Gallery</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a href="" class="nav-link">Contact</a>
@@ -113,7 +113,7 @@
                     <div class="card bg-dark text-light h-100" style="width: 20rem;">
                         <div class="card-body text-center d-flex flex-column">
                             <div class="h1 mb-3">
-                                <img src="images/blud.png" alt="" class="card-img-top">
+                                <img src="./images/blud.png" alt="" class="card-img-top">
                             </div>
                             <h3 class="card-title mb-3">BLUD</h3>
                             <p class="card-text">Embark on an action-packed journey with two characters as they uncover the perilous
@@ -127,7 +127,7 @@
                     <div class="card bg-dark text-light h-100" style="width: 20rem;">
                         <div class="card-body text-center d-flex flex-column">
                             <div class="h1 mb-3">
-                                <img src="images/atm.png" alt="" class="card-img-top">
+                                <img src="./images/atm.png" alt="" class="card-img-top">
                             </div>
                             <h3 class="card-title mb-3">ATM Authenticator</h3>
                             <p class="card-text">ATM Authenticator offers the future of secure banking by integrating Three-Factor-Authentication 
@@ -141,7 +141,7 @@
                     <div class="card bg-dark text-light h-100" style="width: 20rem;">
                         <div class="card-body text-center d-flex flex-column">
                             <div class="h1 mb-3">
-                                <img src="images/workout.png" alt="" class="card-img-top">
+                                <img src="./images/workout.png" alt="" class="card-img-top">
                             </div>
                             <h3 class="card-title mb-3">Workout Tracker</h3>
                             <p class="card-text">Workout tracking application incorporated with user-friendly features such as the ability
