--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 Please find my resume attached below. I look forward to hearing from you!
             </p>
             <hr class="my-4">
-            <p>You can reach me at so.kf.andrew@gmail.com or 416-823-9788.</p>
+            <p>You can reach me at <a href="mailto: so.kf.andrew@gmail.com">so.kf.andrew@gmail.com</a> or 416-823-9788.</p>
             <p class="lead">
                 <a target="_blank" href="resume.pdf" class="btn btn-primary btn-lg">My Resume</a>
             </p>
